# New_Average_4D_MaxEnt

./: .gitignore  CMakeLists.txt  RandomGenerator.h  energy_changes.h  files.h  global.h  initialization.h  main.cpp  moves.h
2025-09-11_1443_averaged/Energies/: alpha_0.txt  energies_0.txt
2025-09-11_1443_averaged/configurations/: configuration_ring_0_1012.txt  configuration_ring_0_1026.txt  configuration_ring_0_1027.txt  configuration_ring_0_1035.txt  configuration_ring_0_1039.txt  configuration_ring_0_1055.txt  configuration_ring_0_1072.txt  configuration_ring_0_1074.txt  configuration_ring_0_1082.txt  configuration_ring_0_1084.txt  configuration_ring_0_109.txt  configuration_ring_0_1112.txt  configuration_ring_0_1113.txt  configuration_ring_0_1122.txt  configuration_ring_0_1139.txt  configuration_ring_0_1140.txt  configuration_ring_0_1142.txt  configuration_ring_0_1167.txt  configuration_ring_0_1190.txt  configuration_ring_0_1200.txt  configuration_ring_0_1201.txt  configuration_ring_0_1210.txt  configuration_ring_0_1212.txt  configuration_ring_0_1213.txt  configuration_ring_0_1224.txt  configuration_ring_0_1238.txt  configuration_ring_0_1242.txt  configuration_ring_0_1257.txt  configuration_ring_0_1265.txt  configuration_ring_0_1280.txt  configuration_ring_0_1283.txt  configuration_ring_0_129.txt  configuration_ring_0_1291.txt  configuration_ring_0_1293.txt  configuration_ring_0_1304.txt  configuration_ring_0_1306.txt  configuration_ring_0_1316.txt  configuration_ring_0_1321.txt  configuration_ring_0_1328.txt  configuration_ring_0_1339.txt  (+1659 more)
(+10633 files in other folders)
